fix - adjust z-index of options popups

--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -84,6 +84,7 @@
 .date {
   position: absolute;
   top: 50px;
+  z-index: 2;
 }
 
 .options {
@@ -95,6 +96,7 @@
   -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
   padding: 10px;
+  z-index: 2;
 }
 
 .optionItem {
